samples/_failures_safe/1761522567_87938a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_257cbc31.c: In function ‘main’:
./samples/SAFE/__tmp_257cbc31.c:180:16: error: missing terminating " character
  180 |         printf("
      |                ^
./samples/SAFE/__tmp_257cbc31.c:180:9: error: expected expression at end of input
  180 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_257cbc31.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_257cbc31.c:180:9: error: expected declaration or statement at end of input
